test multiple orgs

--- a/.github/workflows/manual-deploy.yaml
+++ b/.github/workflows/manual-deploy.yaml
@@ -1,10 +1,16 @@
-name: Manual deploy to test org
+name: Manual deploy to multiple test org/s
+
 
 on:
   workflow_dispatch: 
+    inputs:
+      target-org:
+        description: 'Select org/s to deploy (comma separated: org1,org2)'
+        required: true
+        default: 'org1'
 
 jobs:
-  Deploy-to-sffnoobs-environment:
+  Deploy:
       runs-on: ubuntu-latest
       steps:
           - uses: actions/setup-node@v3
@@ -29,8 +35,18 @@ jobs:
                 sf sgd source delta --to "HEAD" --from "HEAD~1" --output changed-sources/ --generate-delta --source force-app/
                 echo "[INFO] Diff generated"
                 
-          - name: 'Deploy to environment with running all local tests'
+          # Deploy to Org 1 if selected
+          - name: Deploy to Org 1
+            if: contains(github.event.inputs.target-orgs, 'org1')
             run: |
-                echo "${{ secrets.SERVER_KEY }}" > server.key
-                sf org login jwt --username ${{ secrets.USER_NAME }} --jwt-key-file server.key --client-id ${{ secrets.CONSUMER_KEY }} --instance-url ${{ vars.INSTANCE_URL }} --set-default
-                sf project deploy start --source-dir changed-sources/force-app --test-level RunLocalTests
+              echo "${{ secrets.SERVER_KEY }}" > server.key
+              sf org login jwt --username ${{ secrets.USER_NAME }} --jwt-key-file server.key --client-id ${{ secrets.CONSUMER_KEY }} --instance-url ${{ vars.INSTANCE_URL }} --set-default
+              sf project deploy start --source-dir force-app --test-level RunLocalTests
+
+          # Deploy to Org 2 if selected
+          - name: Deploy to Org 2
+            if: contains(github.event.inputs.target-orgs, 'org2')
+            run: |
+              echo "${{ secrets.TASMIMA_SERVER_KEY }}" > server.key
+              sf org login jwt --username ${{ secrets.TASMIMA_ORG_USER_NAME }} --jwt-key-file server.key --client-id ${{ secrets.TASMIMA_ORG_CONNECTED_APP_CONSUMER_KEY }} --instance-url ${{ vars.TASMIMA_ORG_INSTANCE_URL }} --set-default
+              sf project deploy start --source-dir force-app --test-level RunLocalTests
